# wakizashi

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: auto-tag.yml  firmware.yml  pages.yml
build-guide/: README.md
case/: bottom-plate.md  keycap_bottom.3mf  keycap_edge.3mf  keycap_middle.3mf  keycap_middle_dot.3mf  side-case.md  top-plate.md  wakizashi_bottomplate.step  wakizashi_case.3mf  wakizashi_case.step  wakizashi_case_bottom.3mf  wakizashi_case_spacer.3mf  wakizashi_case_topplate.3mf  wakizashi_side.step  wakizashi_spacer.step  wakizashi_topplate.3mf  wakizashi_topplate.step
docs/: flashing.md  releasing.md
firmware/: .gitignore  Cargo.toml  Makefile.toml  build.rs  gen_flash_nuke.py  keyboard.toml  memory.x  vial.json
firmware/src/: main.rs
tools/web-flasher/: app.js  dfu.js  hid.js  index.html  slip.js  style.css
