[package]
name = "wakizashi-firmware"
version = "0.1.0"
authors = ["aiirononeko"]
description = "Wakizashi keyboard firmware powered by RMK"
homepage = "https://github.com/aiirononeko/tabi"
repository = "https://github.com/aiirononeko/tabi"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.8", features = ["async_matrix", "nrf52840_ble", "adafruit_bl", "controller"] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
    "defmt", "peripheral", "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
    "defmt", "critical-section-impl", "nrf52840",
] }
bt-hci = { version = "0.6", features = ["defmt"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.8", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"
rand = { version = "0.8", default-features = false }
rand_core = "0.6"
rand_chacha = { version = "0.3", default-features = false }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "wakizashi-firmware"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'abort'

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"
